# BitBishop

./: .clang-tidy  .dockerignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  shieldsio_coverage_badge.json
cmake/: BitBishop.h.in  BitBishopConfig.cmake.in  (+4 more)
main/: CMakeLists.txt  bitbishop.cpp  uci_loop.cpp
src/bitbishop/: CMakeLists.txt  bitboard.cpp  board.cpp  logging.cpp  move.cpp  move_builder.cpp  move_effect.cpp  move_execution.cpp  position.cpp  zobrist.cpp
src/bitbishop/attacks/: bishop_attacks.cpp  checkers.cpp  queen_attacks.cpp  rook_attacks.cpp
src/bitbishop/engine/: evaluation.cpp  search.cpp
src/bitbishop/interface/: search_controller.cpp  search_reporter.cpp  search_session.cpp  search_worker.cpp  uci_command_channel.cpp  uci_command_registry.cpp  uci_engine.cpp
src/bitbishop/movegen/: check_mask.cpp  pins.cpp
src/bitbishop/moves/: bishop_move_gen.cpp  king_move_gen.cpp  knight_move_gen.cpp  move_builder.cpp  move_effect.cpp  move_execution.cpp  pawn_move_gen.cpp  position.cpp  queen_move_gen.cpp  rook_move_gen.cpp
src/bitbishop/tools/: perft.cpp  time_guard.cpp
tests/: CMakeLists.txt
tests/bitbishop/: test_bitboard.cpp  test_board.cpp  test_color.cpp  test_move.cpp  test_piece.cpp  test_random.cpp  test_square.cpp  test_uci_loop.cpp  test_zobrist.cpp
tests/bitbishop/attacks/: test_bishop_north_east_attacks.cpp  test_bishop_north_west_attacks.cpp  test_bishop_south_east_attacks.cpp  test_bishop_south_west_attacks.cpp  test_generate_attacks.cpp  test_rook_east_attacks.cpp  test_rook_north_attacks.cpp  test_rook_south_attacks.cpp  test_rook_west_attacks.cpp
tests/bitbishop/attacks/checkers/: test_compute_checkers.cpp
tests/bitbishop/bitboard/: test_bb_any.cpp  test_bb_bitshifts_ops.cpp  test_bb_bitwise_ops.cpp  test_bb_bool_op.cpp  test_bb_constructors.cpp  test_bb_count.cpp  test_bb_equality_ops.cpp  test_bb_iterator.cpp  test_bb_lsb.cpp  test_bb_msb.cpp  test_bb_pop_lsb.cpp  test_bb_pop_msb.cpp  test_bb_print.cpp  test_bb_set_test_clear_reset.cpp
tests/bitbishop/board/: test_b_black_pieces.cpp  test_b_board_state.cpp  test_b_can_castle_kingside.cpp  test_b_can_castle_queenside.cpp  test_b_constructors.cpp  test_b_en_passant_square.cpp  test_b_enemy.cpp  test_b_equality_operators.cpp  test_b_friendly.cpp  test_b_get_fen.cpp  test_b_get_piece_bitboard.cpp  test_b_has_insufficient_material.cpp  test_b_king_square.cpp  test_b_move_piece.cpp  test_b_occupied.cpp  test_b_print.cpp  test_b_set_get_remove_piece.cpp  test_b_stream_ops.cpp  test_b_unoccupied.cpp  test_b_white_pieces.cpp  test_b_zobrist_hash.cpp
tests/bitbishop/engine/evaluation/: test_compute_score_from_psqt.cpp  test_evaluate.cpp  test_evaluate_material.cpp  test_evaluate_psqt.cpp  test_flip_index.cpp  test_flip_psqt.cpp
tests/bitbishop/engine/search/: test_negamax.cpp
tests/bitbishop/helpers/: async.hpp  blocking_stream.hpp  moves.hpp  repetition.hpp
tests/bitbishop/interface/: test_search_controller.cpp  test_search_limits.cpp  test_search_reporter.cpp  test_search_session.cpp  test_search_worker.cpp  test_split.cpp  test_uci_command_channel.cpp  test_uci_command_registry.cpp  test_uci_engine.cpp
tests/bitbishop/lookups/: test_attackers.cpp  test_attacks_bishop.cpp  test_attacks_king.cpp  test_attacks_knight.cpp  test_attacks_pawns.cpp  test_attacks_queen.cpp  test_attacks_rook.cpp  test_between_squares.cpp  test_bishop_rays.cpp  test_knight_attacks.cpp  test_pawn_attacks.cpp  test_queen_rays.cpp  test_rook_rays.cpp
tests/bitbishop/lookups/test_between_squares/: test_between_lookup.cpp  test_direction.cpp  test_ray_between.cpp
tests/bitbishop/movegen/: test_bishop_moves.cpp  test_castling_moves.cpp  test_check_mask.cpp  test_king_moves.cpp  test_knight_moves.cpp  test_legal_capture_moves.cpp  test_legal_moves.cpp  test_queen_moves.cpp  test_rook_moves.cpp
tests/bitbishop/movegen/test_pawn_moves/: test_add_pawn_promotions.cpp  test_can_capture_en_passant.cpp  test_generate_pawn_legal_moves.cpp  test_is_promotion_rank.cpp  test_pmg_is_starting_rank.cpp
tests/bitbishop/movegen/test_pins/: test_compute_pins.cpp  test_scan_pin_ray.cpp
tests/bitbishop/moves/: test_move_builder.cpp  test_move_effect.cpp  test_move_execution.cpp  test_position.cpp
tests/bitbishop/moves/bishop_move_generator/: test_bmg_generate_pseudo_legal_moves.cpp  test_bmg_north_east_rays.cpp  test_bmg_north_west_rays.cpp  test_bmg_south_east_rays.cpp  test_bmg_south_west_rays.cpp
tests/bitbishop/moves/king_move_generator/: test_kmg_generate_pseudo_legal_moves.cpp
tests/bitbishop/moves/knight_move_generator/: test_nmg_generate_pseudo_legal_moves.cpp
tests/bitbishop/moves/pawn_move_generator/: test_pmg_add_pawn_promotions.cpp  test_pmg_can_capture_en_passant.cpp  test_pmg_captures.cpp  test_pmg_double_push.cpp  test_pmg_generate_pseudo_legal_moves.cpp  test_pmg_is_promotion_rank.cpp  test_pmg_is_starting_rank.cpp  test_pmg_single_push.cpp
tests/bitbishop/moves/queen_move_generator/: test_qmg_generate_pseudo_legal_moves.cpp
tests/bitbishop/moves/rook_move_generator/: test_rmg_add_rook_castling.cpp  test_rmg_east_rays.cpp  test_rmg_generate_pseudo_legal_moves.cpp  test_rmg_north_rays.cpp  test_rmg_south_rays.cpp  test_rmg_west_rays.cpp
tests/bitbishop/piece/: test_piece_color.cpp  test_piece_comparison_op.cpp  test_piece_constructors.cpp  test_piece_is_promotion.cpp  test_piece_name.cpp  test_piece_to_char.cpp  test_piece_type.cpp  test_pieces_namespace_constants.cpp
tests/bitbishop/tools/: test_perft.cpp  test_perft_divide.cpp  test_time_guard.cpp
tests/chess_engine/: test_bitboard.cpp  test_board.cpp  test_color.cpp  test_knight.cpp
tests/chess_engine/attacks/: test_attacks_queen.cpp
tests/chess_engine/helpers/: moves.cpp  moves.hpp
tests/chess_engine/lookups/: test_attacks_bishop.cpp  test_attacks_king.cpp  test_attacks_pawns.cpp  test_attacks_queen.cpp  test_attacks_rook.cpp
tests/chess_engine/movegen/: test_pawn_movegen.cpp
tests/chess_engine/movegen/king_move_generator/: test_kmg_generate_pseudo_legal_moves.cpp
(+269 files in other folders)
